--- a/example/torus.html
+++ b/example/torus.html
@@ -23,20 +23,15 @@
             box = y.createBox()
             torus = y.createTorus(64, 64, 2.0, 0.5)
             boxTransform = y.createTransform()
+                            .scale(5.0, 1.0, 1.0)
             torusTransform = y.createTransform()
-
-            boxTransform.translate = [0.0, 0.0, 0.0]
-            boxTransform.rotate = [0.0, 0.0, 0.0]
-            boxTransform.scale = [5.0, 1.0, 1.0]
-            torusTransform.translate = [0.0, 0.0, 0.0]
-            torusTransform.rotate = [90.0, 90.0, 0.0]
+                              .rotate(90, 90, 0)
 
             y.projection(window.innerWidth, window.innerHeight, 1.0, 100, 45)
           }
 
           y.draw = function() {
             y.clear(0.5, 0.5, 0.5, 1.0)
-            boxTransform.translate = [5 * Math.sin(y.millis() / 500), 0.0, 0.0]
 
             y.camPos(8 * Math.cos(y.millis() / 2000),
                      2.0,
@@ -44,7 +39,7 @@
             y.lookAtPos(0.0, 0.0, 0.0)
 
             y.fill(0.0, 0.0, 1.0, 1.0)
-            y.transform(boxTransform)
+            y.transform(boxTransform.translate(5 * Math.sin(y.millis() / 500), 0.0, 0.0))
             y.drawShape(box)
 
             y.fill(1.0, 0.0, 0.0, 1.0)
