--- a/example/torus.html
+++ b/example/torus.html
@@ -23,27 +23,24 @@
             box = y.createBox()
             torus = y.createTorus(64, 64, 2.0, 0.5)
             boxTransform = y.createTransform()
-                            .scale(5.0, 1.0, 1.0)
             torusTransform = y.createTransform()
-                              .rotate(90, 90, 0)
 
             y.projection(window.innerWidth, window.innerHeight, 1.0, 100, 45)
+            y.sunDirection(0.0, 5.0, -5.0)
           }
 
           y.draw = function() {
             y.clear(0.5, 0.5, 0.5, 1.0)
 
-            y.camPos(8 * Math.cos(y.millis() / 2000),
-                     2.0,
-                     8 * Math.sin(y.millis() / 2000))
+            y.camPos(0.0, 5.0, -5.0)
             y.lookAtPos(0.0, 0.0, 0.0)
 
             y.fill(0.0, 0.0, 1.0, 1.0)
-            y.transform(boxTransform.translate(5 * Math.sin(y.millis() / 500), 0.0, 0.0))
+            y.transform(boxTransform.rotate(y.millis() / 20, y.millis() / 50, y.millis() / 10))
             y.drawShape(box)
 
             y.fill(1.0, 0.0, 0.0, 1.0)
-            y.transform(torusTransform)
+            y.transform(torusTransform.rotate(y.millis() / 20, y.millis() / 50, 0))
             y.drawShape(torus)
           }
         })
