:new: 面法線を考慮した Geometry クラスの作成

--- a/example/texture.html
+++ b/example/texture.html
@@ -34,7 +34,7 @@
             y.lookAtPos(0.0, 0.0, 0.0)
 
             y.transform(transform)
-            y.fill(1.0, 1.0, 1.0)
+            y.fill(0.0, 0.0, 0.0, 1.0)
             y.setTexture(texture)
             y.drawShape(quad)
           }
