--- a/example/sphere.html
+++ b/example/sphere.html
@@ -14,16 +14,12 @@
         new Yanvas(function(y) {
           var sphere = null
           var box    = null
-          var sphereTransform = null
-          var boxTransform = null
 
           y.setup = function() {
             y.setupCanvas('canvas', window.innerWidth, window.innerHeight)
 
             box    = y.createBox()
             sphere = y.createSphere(0.4, 128, 128)
-            sphereTransform = y.createTransform()
-            boxTransform = y.createTransform()
 
             y.projection(window.innerWidth, window.innerHeight, 1.0, 100, 45)
             y.sunDirection(0.0, 5.0, 5.0)
@@ -38,14 +34,13 @@
             y.lookAtPos(0.0, 0.0, 0.0)
 
             y.fill(1.0, 0.0, 0.0, 1.0)
-            y.transform(boxTransform)
-            y.drawShape(box)
+            y.render(box)
 
-            y.transform(sphereTransform.translate(1.6 * Math.cos(y.millis() / 500),
-                                                  1.6 * Math.sin(y.millis() / 500),
-                                                  1 * Math.sin(y.millis() / 2000)))
+            sphere.position = [1.6 * Math.cos(y.millis() / 500),
+                               1.6 * Math.sin(y.millis() / 500),
+                               1.0 * Math.sin(y.millis() / 2000)]
             y.fill(1.0, 1.0, 0.0, 1.0)
-            y.drawShape(sphere)
+            y.render(sphere)
           }
         })
       })
