--- a/example/torus.html
+++ b/example/torus.html
@@ -14,16 +14,12 @@
         new Yanvas(function(y) {
           var box = null
           var torus = null
-          var boxTransform = null
-          var torusTransform = null
 
           y.setup = function() {
             y.setupCanvas('canvas', window.innerWidth, window.innerHeight)
 
             box = y.createBox()
             torus = y.createTorus(64, 64, 2.0, 0.5)
-            boxTransform = y.createTransform()
-            torusTransform = y.createTransform()
 
             y.projection(window.innerWidth, window.innerHeight, 1.0, 100, 45)
             y.sunDirection(0.0, 5.0, -5.0)
@@ -36,12 +32,12 @@
             y.lookAtPos(0.0, 0.0, 0.0)
 
             y.fill(0.0, 0.0, 1.0, 1.0)
-            y.transform(boxTransform.rotate(y.millis() / 20, y.millis() / 50, y.millis() / 10))
-            y.drawShape(box)
+            box.rotation = [y.millis() / 20, y.millis() / 50, y.millis() / 10]
+            y.render(box)
 
             y.fill(1.0, 0.0, 0.0, 1.0)
-            y.transform(torusTransform.rotate(y.millis() / 20, y.millis() / 50, 0))
-            y.drawShape(torus)
+            torus.rotation = [y.millis() / 20, y.millis() / 50, 0]
+            y.render(torus)
           }
         })
       })
