--- a/example/sphere.html
+++ b/example/sphere.html
@@ -19,7 +19,8 @@
             y.setupCanvas('canvas', window.innerWidth, window.innerHeight)
 
             box    = y.createBox()
-            sphere = y.createSphere(0.4, 128, 128)
+            sphere = y.createSphere(0.4, 48, 48)
+            sphere.material.shadingMode = 'gouraud'
 
             y.projection(window.innerWidth, window.innerHeight, 1.0, 100, 45)
             y.sunDirection(0.0, 5.0, 5.0)
