--- a/example/sphere.html
+++ b/example/sphere.html
@@ -15,7 +15,7 @@
           var sphere   = null
           var sphereLS = null
           var box      = null
-          var light    = null
+          var lights   = new Array(2)
 
           y.setup = function() {
             y.setupCanvas('canvas', window.innerWidth, window.innerHeight)
@@ -23,12 +23,13 @@
             box      = y.createBox()
             sphere   = y.createSphere(0.4, 48, 48)
             sphereLS = y.createSphere(0.05, 16, 16)
-            light    = y.createLight()
+            lights   = lights.fill(0).map(() => y.createLight())
             sphere.material.shadingMode = 'gouraud'
             sphereLS.material.shadingMode = 'constant'
-            sphereLS.position = [0.0, 0.0, 1.0]
-            light.mode = 'point'
-            light.position = [0.0, 0.0, 1.0]
+            lights[0].mode = 'point'
+            lights[1].mode = 'point'
+            lights[0].position = [0.0, 0.0, 1.0]
+            lights[1].position = [0.0, 0.0, -1.0]
 
             y.projection(window.innerWidth, window.innerHeight, 1.0, 100, 45)
           }
@@ -41,8 +42,11 @@
                     1.0)
             y.lookAtPos(0.0, 0.0, 0.0)
 
-            y.setLight(light)
+            y.setLight(lights[0], lights[1])
             y.fill(1.0, 1.0, 1.0, 1.0)
+            sphereLS.position = [0.0, 0.0, 1.0]
+            y.render(sphereLS)
+            sphereLS.position = [0.0, 0.0, -1.0]
             y.render(sphereLS)
 
             y.fill(1.0, 0.0, 0.0, 1.0)
